--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>document</title>
     </head>
     <body>
-        <img src="/baixa.png" alt="icono ins caparrella"
+        <img src="./baixa.png" alt="icono ins caparrella"
         <h1>gemma pedros</h1>
         <p>holaa, ya estamos online</p>
     </body>
